# indian-commodities-trading-platform

./: .gitignore  .replit  Dockerfile  Home.py  README.md  app.py  app.yaml  cloudbuild.yaml  config.py  pyproject.toml  requirements.txt  setup_and_run.bat  setup_and_run.sh
.streamlit/: config.toml
pages/: 1_📊_Market_Data.py  2_⚡_Options_Chain.py  3_🎯_Recommendations.py  4_🔍_Screener.py  5_💼_Portfolio.py  6_⚠️_Risk_Dashboard.py  7_🚨_Trading_Alerts.py  8_🔐_Kite_Auth.py  9_🎯_AI_Trading_Signals.py
static/: styles.css
utils/: __init__.py  ai_recommendation_engine.py  data_fetcher.py  database_manager.py  indian_market_utils.py  kite_integration.py  logger.py  mcx_crude_gas_analyzer.py  options_calculator.py  options_recommendation_engine.py  portfolio_manager.py  risk_calculator.py  simple_ai_engine.py
