[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
